fix code block wrapping

--- a/app/landing/assets/custom.css
+++ b/app/landing/assets/custom.css
@@ -1,7 +1,11 @@
 /* Custom
  -------------------------------------------------- */
 
- .fixed {
+code {
+  white-space: pre-wrap;
+}
+
+.fixed {
   position: fixed;
   top: 0;
   margin-top: 50px;
